<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ebiblefellow2.bushmasters1.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageBusinessCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/biz_card"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/bushcard_image"/>

        <TextView
            android:id="@+id/textView1"
            style="@style/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageBusinessCard"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/textView1_layout_marginTop"
            android:text="@string/landscaping"/>

        <Button
            android:id="@+id/btn_grass_cutting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btn_grass_cutting_layout_marginTop"
            android:padding="@dimen/btn_grass_cutting_padding"
            style="@style/btn_grass_cutting"
            android:text="@string/btn_grassCutting"/>

        <TextView
            android:id="@+id/textView2"
            style="@style/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_grass_cutting"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/textView2_layout_marginTop"
            android:padding="@dimen/textView2_padding"
            android:text="@string/grassText"/>

        <Button
            android:id="@+id/btn_shrub_bed"
            style="@style/btn_grass_cutting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_shrub_bed_padding"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_shrub_bed"/>

        <TextView
            android:id="@+id/textView3"
            style="@style/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_shrub_bed"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/textView3_layout_marginTop"
            android:padding="@dimen/textView3_padding"
            android:text="@string/shrub_bed_text"/>

        <Button
            android:id="@+id/btn_projects_we_maintain"
            style="@style/btn_projects_we_maintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btn_projects_we_maintain_padding"
            android:padding="@dimen/btn_projects_we_maintain_padding"
            android:text="@string/projects_we_maintain"/>

        <ImageView
            android:id="@+id/project_one"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/project_one_layout_height"
            android:contentDescription="@string/project_one"
            android:layout_below="@id/btn_projects_we_maintain"
            android:layout_marginTop="@dimen/project_one_layout_marginTop"
            app:srcCompat="@drawable/project_one"/>

        <ImageView
            android:id="@+id/project_two_a"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/project_two_a_layout_height"
            android:contentDescription="@string/project_two_a"
            android:layout_below="@id/project_one"
            android:layout_marginTop="@dimen/project_two_a_layout_marginTop"
            app:srcCompat="@drawable/project_two_a"/>

        <TextView
            android:id="@+id/serving"
            style="@style/serving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_two_a"
            android:layout_centerHorizontal="true"
            android:text="@string/serving"/>

        <TextView
            android:id="@+id/contact_us"
            style="@style/contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/contact_us_layout_marginBottom"
            android:padding="@dimen/contact_us_padding"
            android:layout_below="@id/serving"
            android:text="@string/contact_us"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>